// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferLists Component render renders TransferLists component when assigned transferlists and flow transferlists are in loading state 1`] = `
<Fragment>
  <div>
    <div
      style={
        Object {
          "borderRadius": "3px",
          "display": "flex",
          "fontSize": "15px",
          "fontWeight": "bold",
          "marginBottom": "-2px",
        }
      }
    >
      <FormattedMessage
        defaultMessage="Checking Interaction Transfer Lists Availability..."
        id="app.containers.TransferMenu.checkingInteractionTransferLists"
        values={Object {}}
      />
    </div>
    <IconSVG
      id="interactionTransferListsLoadingIcon"
      name="loading"
      style={
        Object {
          "height": "40px",
          "width": "40px",
        }
      }
    />
  </div>
  <div>
    <div
      style={
        Object {
          "borderRadius": "3px",
          "display": "flex",
          "fontSize": "15px",
          "fontWeight": "bold",
          "marginBottom": "-2px",
        }
      }
    >
      <FormattedMessage
        defaultMessage="Checking Assigned Transfer Lists Availability..."
        id="app.containers.TransferMenu.checkingUserAssignedTransferLists"
        values={Object {}}
      />
    </div>
    <IconSVG
      id="assignedTransferListsLoadingIcon"
      name="loading"
      style={
        Object {
          "height": "40px",
          "width": "40px",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`TransferLists Component render renders TransferLists component when there are no assigned transferlists and flow transfer lists 1`] = `<Fragment />`;

exports[`TransferLists Component render renders TransferLists component with user assinged transferlists and interaction transferlists for the non-voice interaction 1`] = `
<Fragment>
  <div>
    <div
      id="allInterAssigTransListsCollapExpandBtn"
      key="allInterAssigTransListsCollapExpandBtn"
      onClick={[Function]}
      style={
        Array [
          undefined,
          Object {
            "marginTop": "20px",
          },
        ]
      }
    >
      <FormattedMessage
        defaultMessage="Transfer lists for this Interaction"
        id="app.containers.TransferMenu.interactionTransferLists"
        values={Object {}}
      />
      <Icon
        name="caret"
      />
    </div>
    <div
      className="interAssigTransList-undefined"
      key="interAssigTransList-undefined"
      style={
        Object {
          "marginTop": "25px",
        }
      }
    >
      <div
        id="interAssigTransListCollapExpndBtn-mockNonVoiceTransferListId"
        key="interAssigTransListCollapExpndBtn-mockNonVoiceTransferListId"
        onClick={[Function]}
        title="mockNonTransferListName"
      >
        <span
          className="transferListName"
          style={
            Object {
              "flexBasis": "100%",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mockNonTransferListName
        </span>
        <Icon
          name="caret"
        />
      </div>
      <div
        className="bigSpacer"
      />
    </div>
  </div>
  <div>
    <div
      id="allUserAssigTransListsCollapExpandBtn"
      key="allUserAssigTransListsCollapExpandBtn"
      onClick={[Function]}
      style={
        Array [
          undefined,
          Object {
            "marginTop": "20px",
          },
        ]
      }
    >
      <FormattedMessage
        defaultMessage="Transfer lists assigned to you"
        id="app.containers.TransferMenu.assignedTransferLists"
        values={Object {}}
      />
      <Icon
        name="caret"
      />
    </div>
    <div
      className="userAssigTransList-undefined"
      key="userAssigTransList-undefined"
      style={
        Object {
          "marginTop": "25px",
        }
      }
    >
      <div
        id="userAssigTransListCollapExpndBtn-mockNonVoiceTransferListId"
        key="userAssigTransListCollapExpndBtn-mockNonVoiceTransferListId"
        onClick={[Function]}
        title="mockNonTransferListName"
      >
        <span
          className="transferListName"
          style={
            Object {
              "flexBasis": "100%",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mockNonTransferListName
        </span>
        <Icon
          name="caret"
        />
      </div>
      <div
        className="bigSpacer"
      />
    </div>
  </div>
</Fragment>
`;

exports[`TransferLists Component render renders TransferLists component with user assinged transferlists and interaction transferlists for the voice interaction 1`] = `
<Fragment>
  <div>
    <div
      id="allInterAssigTransListsCollapExpandBtn"
      key="allInterAssigTransListsCollapExpandBtn"
      onClick={[Function]}
      style={
        Array [
          undefined,
          Object {
            "marginTop": "20px",
          },
        ]
      }
    >
      <FormattedMessage
        defaultMessage="Transfer lists for this Interaction"
        id="app.containers.TransferMenu.interactionTransferLists"
        values={Object {}}
      />
      <Icon
        name="caret"
      />
    </div>
    <div
      className="interAssigTransList-undefined"
      key="interAssigTransList-undefined"
      style={
        Object {
          "marginTop": "25px",
        }
      }
    >
      <div
        id="interAssigTransListCollapExpndBtn-mockVoiceTransferListId"
        key="interAssigTransListCollapExpndBtn-mockVoiceTransferListId"
        onClick={[Function]}
        title="mockVoiceTransferListName"
      >
        <span
          className="transferListName"
          style={
            Object {
              "flexBasis": "100%",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mockVoiceTransferListName
        </span>
        <Icon
          name="caret"
        />
      </div>
      <div
        className="bigSpacer"
      />
    </div>
  </div>
  <div>
    <div
      id="allUserAssigTransListsCollapExpandBtn"
      key="allUserAssigTransListsCollapExpandBtn"
      onClick={[Function]}
      style={
        Array [
          undefined,
          Object {
            "marginTop": "20px",
          },
        ]
      }
    >
      <FormattedMessage
        defaultMessage="Transfer lists assigned to you"
        id="app.containers.TransferMenu.assignedTransferLists"
        values={Object {}}
      />
      <Icon
        name="caret"
      />
    </div>
    <div
      className="userAssigTransList-undefined"
      key="userAssigTransList-undefined"
      style={
        Object {
          "marginTop": "25px",
        }
      }
    >
      <div
        id="userAssigTransListCollapExpndBtn-mockVoiceTransferListId"
        key="userAssigTransListCollapExpndBtn-mockVoiceTransferListId"
        onClick={[Function]}
        title="mockVoiceTransferListName"
      >
        <span
          className="transferListName"
          style={
            Object {
              "flexBasis": "100%",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mockVoiceTransferListName
        </span>
        <Icon
          name="caret"
        />
      </div>
      <div
        className="bigSpacer"
      />
    </div>
  </div>
</Fragment>
`;
